@@ -12,7 +12,7 @@ typedef struct {
 #define PY_VORBISFILE(x) (((py_vorbisfile *)x)->ovf)
 extern PyTypeObject py_vorbisfile_type;
 
-#endif // __PYVORBIS_FILE_H__
+#endif /* __PYVORBIS_FILE_H__ */
 
 
 
